@@ -1,3 +1,9 @@
+# 2023/01/30
+- ASSISTNAMES to list out priority order of people to manually assist
+- MEDCOMBAT to toggle whether to keep medding during combat
+- Pull med settings changed to be used for medding in general
+- OMM mask event
+
 # 2023/01/29
 - Some cleanup work
 - Try making bard clickies less crashy
